# cmake_demo

./: CMakeLists.txt
lib/: Makefile  cmake_install.cmake
lib/include/: Logger.h
lib/src/: CMakeLists.txt  Logger.cc  Makefile  cmake_install.cmake  libMyLib.dylib
src/: CMakeLists.txt  Main.cc  Makefile  cmake_install.cmake
tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test1  test_minuit.cc
tests/Testing/Temporary/: CTestCostData.txt
